# dns-record-update

./: CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.local  Containerfile.local-release  Dockerfile  Dockerfile.local  Dockerfile.local-release  Makefile
.github/workflows/: docker-publish.yml  image-publish.yml  release-please.yml  rust-clippy.yml
src/: lib.rs  main.rs
