[package]
name = "dns-record-update"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.8.3"
cloudflare = "0.10.1"
env_logger = "0.10.0"
futures-util = { version = "0.3.25", default-features = false, features = [
  "std",
] }
log = "0.4.20"
openssl = { version = "0.10.42", features = ["vendored"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
rsdns = { version = "0.15.0", features = ["net-tokio"] }
serde = { version = "1.0.147" }
serde_json = "1.0.87"
thrift = "0.17"
tokio = { version = "1.32.0", features = ["rt", "net", "macros"] }
vaultrs = "0.7.0"
webpki = "0.22"
