[package]
name = "dns-record-update"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.10.0"
cloudflare = "0.11.0"
env_logger = "0.11.1"
futures-util = { version = "0.3.30", default-features = false, features = [
  "std",
] }
log = "0.4.20"
openssl = { version = "0.10.63", features = ["vendored"] }
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
rsdns = { version = "0.19.0", features = ["net-tokio"] }
serde = { version = "1.0.196" }
serde_json = "1.0.113"
thrift = "0.17"
tokio = { version = "1.35.1", features = ["rt", "net", "macros"] }
vaultrs = "0.7.0"
webpki = "0.22"
